Support Percentile in PPL
Signed-off-by: Lantao Jin <ltjin@amazon.com>